[gd_scene load_steps=7 format=3 uid="uid://blwqr40qf2moo"]

[ext_resource type="Material" uid="uid://6j23cyf7rx4e" path="res://Materials/Doors.tres" id="1_blvux"]
[ext_resource type="Script" path="res://Code/Levels/Door.gd" id="2_i26lu"]
[ext_resource type="AudioStream" uid="uid://dqbx7rmsfjh81" path="res://Assets/Sounds/Door.wav" id="3_pywpu"]

[sub_resource type="BoxMesh" id="BoxMesh_vlqee"]
material = ExtResource("1_blvux")
size = Vector3(3, 3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_moey3"]
size = Vector3(3, 3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_n5qt7"]
size = Vector3(3, 3, 3)

[node name="Door" type="MeshInstance3D"]
mesh = SubResource("BoxMesh_vlqee")
script = ExtResource("2_i26lu")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_moey3")

[node name="Entrance" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.05646)
collision_layer = 32
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Entrance"]
shape = SubResource("BoxShape3D_n5qt7")

[node name="Exit" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.07442)
collision_layer = 32
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Exit"]
shape = SubResource("BoxShape3D_n5qt7")

[node name="ActionSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_pywpu")

[connection signal="body_entered" from="Entrance" to="." method="_on_entrance_body_entered"]
[connection signal="body_exited" from="Entrance" to="." method="_on_entrance_body_exited"]
[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
[connection signal="body_exited" from="Exit" to="." method="_on_exit_body_exited"]
